# internship

allocator/: CMakeLists.txt
allocator/src/: allocator.h  memoryManager.h  testWorkWithMemory.cpp  workWithMemory.h
filterIterator/: CMakeLists.txt
filterIterator/src/: filterIterator.h  testFilterIterator.cpp
generatorFibonacci/: CMakeLists.txt
generatorFibonacci/src/: generatorFibonacci.cpp  generatorFibonacci.h  generator_iterator.h  testGeneratorFibonacci.cpp
joinForString/: CMakeLists.txt
joinForString/src/: join.h  testJoin.cpp
limitedSyncQueue/: CMakeLists.txt
limitedSyncQueue/src/: syncQueue.h  testSyncQueue.cpp
notificator/: CMakeLists.txt
notificator/src/: base_notifier.h  buffer.h  buffered_notifier.h  notificator.h  optional_notifier.h  queue_notifier.h  single_notifier.h  testNotificator.cpp
readers-Writer_lock/: CMakeLists.txt
readers-Writer_lock/src/: readers-writer_lock.h  testReaders-Writer_lock.cpp  wrapper_RWL.h
ruleOfFiveExample/: CMakeLists.txt
ruleOfFiveExample/src/: ruleOfFiveExample.cpp  ruleOfFiveExample.h
smartCache/: CMakeLists.txt
smartCache/src/: smartCache.h  testData.h  testSmartCache.cpp
transformIterator/: CMakeLists.txt
transformIterator/src/: testTransformIterator.cpp  transformIterator.h
variadicTemplate/: CMakeLists.txt
variadicTemplate/src/: logger.h  testLogger.cpp
